Fix Three.js duplicate import and improve matchmaking error logging
- Remove CDN Three.js script from index.html to prevent duplicate instances
- Update VantaBackground to use npm packages (three, vanta) instead of CDN
- Add detailed error logging in getIdToken() and getCurrentUser()
- Re-throw errors in startSearching() so callers know matchmaking failed
- Improve error message display in BattleScreen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.rings.min.js"></script>
-      <script src="https://www.aura.build/FxFilter.js"></script>
+    <!-- Three.js and Vanta are now imported via npm packages to avoid duplicate instances -->
+    <script src="https://www.aura.build/FxFilter.js"></script>
   </head>
   <body>
     <div id="root"></div>
